修改 顾问自己视角  点击  头像 跳  自己  审核人：王维久

--- a/views/center_case.html
+++ b/views/center_case.html
@@ -95,7 +95,7 @@
             {% if login_info.usertype == 1 %} {#用户#}
             {{ advisor.user(userinfo,helper) }}
             {% elif login_info.usertype == 2 %} {#顾问#}
-            {{ advisor.advisor(userinfo,helper,login_info) }}
+            {{ advisor.advisor_center(userinfo,helper,login_info) }}
             {% elif login_info.usertype == 3 %} {#参赞#}
             {{ advisor.counsellor(userinfo,helper,login_info) }}
             {% endif %}
