--- a/views/center_collection.html
+++ b/views/center_collection.html
@@ -88,7 +88,7 @@
             {% if login_info.usertype == 1 %} {#用户#}
             {{ community_advisor.user(userinfo,helper) }}
             {% elif login_info.usertype == 2 %} {#顾问#}
-            {{ community_advisor.advisor(userinfo,helper,login_info) }}
+            {{ community_advisor.advisor_center(userinfo,helper,login_info) }}
             {% elif login_info.usertype == 3 %} {#参赞#}
             {{ community_advisor.counsellor(userinfo,helper,login_info) }}
             {% endif %}
