--- a/views/center_post_code.html
+++ b/views/center_post_code.html
@@ -171,7 +171,7 @@
             {{ user.user(userinfo,helper) }}
             {% elif login_info.usertype == 2 %} {#顾问#}
             {% import "widget2/community_advisor/community_advisor.html" as advisor %}
-            {{ advisor.advisor(userinfo,helper,login_info) }}
+            {{ advisor.advisor_center(userinfo,helper,login_info) }}
             {% elif login_info.usertype == 3 %} {#参赞#}
             {% import "widget2/community_advisor/community_advisor.html" as counsellor %}
             {{ counsellor.counsellor(userinfo,helper,login_info) }}
