--- a/public/assets/css/article_detail.css
+++ b/public/assets/css/article_detail.css
@@ -155,6 +155,7 @@
 .page_share_buttons .weixin-pengyouquan{
   background:url(../img/pyq.png) no-repeat 0 0 !important;
   background-size: 20px 20px;
+  display: none;
 }
 .page_share_buttons .bds_tsina{
   background:url(../img/xl.png) no-repeat 0 0 !important;
