--- a/views/login/register.html
+++ b/views/login/register.html
@@ -35,15 +35,134 @@
       margin-right: 10px;
       cursor:pointer;
     }
+    .inputtext_isr{
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+      -o-box-sizing: border-box;
+      -ms-box-sizing: border-box;
+      box-sizing: border-box;
+    }
+    .form-control{
+      display: inline-block;
+      line-height: 25px;
+    }
+
+    .fen img{
+      width: 22px;
+      height: 22px;
+      margin-right: 10px;
+      cursor:pointer;
+    }
+    .inputtext_isr input {
+      width: 100%;
+      height: 34px;
+      color: #999;
+      margin-bottom: 15px;
+      border-radius: inherit;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      background-color: #fff;
+      background-image: none;
+    }
+    .inputtext_isr .login_error{
+      background-color: #FFFBEF;
+      border: 1px solid #C13232;
+      padding: 6px 12px;
+      z-index: 1;
+      box-shadow: 0 1px 1px #eee;
+      color: #C13232;
+      position: absolute;
+      right: -75px;
+      left: 205px;
+      top: -19px;
+      opacity: 1;
+    }
+    .inputtext_isr .login_error:after,.login_error:before{
+      border: 6px solid transparent;
+      content: ' ';
+      position: absolute;
+      left: 1em;
+    }
+    .inputtext_isr .login_error:before{
+      border-top-color: #C13232;
+      bottom: -13px;
+    }
+    .inputtext_isr .login_error:after{
+      border-top-color: #fffbef;
+      bottom: -12px;
+    }
+    .inputtext_isr .login_x{
+      width: 9px;
+      height: 9px;
+      display: inline-block;
+      margin-right: 5px;
+      background: url({{helper.cdnhost}}/assets/img/login_error_1.png)
+    }
+    .login_nei{
+      width: 440px;
+      height: 335px;
+      float: right;
+      background: #fcf4ef;
+      margin-top: -390px;
+      margin-right: 5px;
+      z-index: 10000;
+      padding: 0px;
+    }
+    .login_nei_top{
+      width: 100%;
+      height: 40px;
+      text-align: center;
+      line-height: 40px;
+    }
+    .login_nei_top .active{
+      border-bottom: none;
+      background: #fcf4ef;
+      color: #c13232;
+    }
+    .login_nei_title{
+      width: 220px;
+      height: 40px;
+      font-size: 18px;
+      color: #333;
+      background: #f5f5f5;
+      border-bottom: 1px solid #dcdcdc;
+      border-right: 1px solid #dcdcdc;
+      float: left;
+      cursor: pointer;
+    }
+    .login_nei_title_new{
+      width: 220px;
+      margin-top: 20px;
+      font-size: 18px;
+      color: #c13232;
+    }
+    .login_form{
+      width: 440px;
+      height: auto;
+      margin-right: 5px;
+      padding: 0 72px 0 72px;
+      text-align: left;
+    }
+    .phone_q{
+      color: #999;
+      position: absolute;
+      top: 6px;
+      width: 55px;
+      left: 30px;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
 {% include "widget/common_hide/common_hide.html"%}
   {% include "widget/top/top.html" %}
-  {% include "widget/nav_login/nav_login.html" %}
+  <div class="main" style="margin: 0 auto;">
+    {% import "widget/new_nav_first/nav_login.html" as nav_login %}
+    {{ nav_login.nav_login(tdk,helper) }}
+  </div>
 
-  <div class="register_overseas clearfix" style="margin-top: 30px">
-    <div class="register_content">
+  <div class="register_overseas clearfix" style="padding-top: 0px;">
+    {#<div class="register_content">
       <div class="register_nei login_nei">
         <div class="register_nei_title">用户注册<i>已经注册，现在 <a target="_blank"  href="{{helper.urlgen('login')}}">登录</a></i></div>
 
@@ -100,10 +219,74 @@
           </div>
 
         </div>
-        <div class="register_r" id="XC_REGISTER_SEAT1"></div>
-        <!--<div class="register_r">
+        <!--<div class="register_r" id="XC_REGISTER_SEAT1"></div>
+        <div class="register_r">
           <img src="{{helper.cdnhost}}/assets/img/r_reg.png" alt=""/>
         </div>-->
+      </div>
+    </div>#}
+    <div style="margin: 0px auto;height: 550px;width: 100%;background: url({{helper.cdnhost}}/assets/img/login_background.png);
+    background-repeat: no-repeat;background-size: cover;">{# #}
+      {# <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;display:block;overflow:hidden;"/> #}
+    </div>
+    
+    <div class="login_content">
+      <div class="login_nei text-center loginscreen  animated fadeInDown" style="text-align: left;height: 374px;">
+
+          
+        <div class="login_form">     
+        <h3 class="login_nei_title_new" style="font-weight: 400">快速注册</h3>
+        <form class="form-group m-t" role="form" style="margin-top: 20px;">
+          
+          <div class="form-group inputtext_isr clearfix" style="position: relative;height: 28px">
+            
+            <input type="text" style="border-radius: inherit;height: 30px;padding-left: 90px;" class="form-control" placeholder="请输入手机号" id="newEmail" required data-vaild="^1[3|4|5|7|8]\d{9}$" data-errmsg="手机号不正确" />
+            <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 8px" class="iconfont">&#xe619;</i>
+            <i class="phone_q">+86</i>
+            <span class="login_error" id="login_e_phone_u" style="display: none;"><i class="login_x"></i><em id="login_error_text_phone_u">请输入手机号</em></span>
+          </div>
+          <div class="form-group clearfix" style="margin-top: 20px;position: relative;">
+            <input  type="text" id="verify" class="form-control l_u_com_yan" placeholder="请输入手机验证码" style="padding-left: 0px;text-indent: 30px;border-radius: inherit;height: 30px;line-heigth: 30px;float:left;" required data-vaild="^\d{4}$" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+            <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 10px" class="iconfont">&#xe606;</i>
+            <div class="l_u_com_bang" style="margin-right: 0px;height: 30px;line-heigth: 30px;margin-top: -7px;float: right;">
+              <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
+              <input type="button" class="btn btn-primary" style="width: 90px;height: 30px;text-align: center;padding: 6px 2px;background: #fff;color: #c13232;border: 1px solid #c13232;border-radius: 3px;line-height: 0px;border-radius: inherit;" id="sendcun" value="发送验证码"/>
+            </div>
+          </div>
+          <div class="form-group inputtext_isr clearfix" style="position: relative;height: 28px;margin-top: 20px">
+
+            <input type="password" style="border-radius: inherit;height: 30px;" class="form-control" placeholder="请输入6-12位数字+字母组成" required="" data-vaild="^[a-zA-Z0-9]{8,16}$" id="password" data-errmsg="密码不正确，请输入8-16位数字或字母">
+            <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 10px" class="iconfont">&#xe606;</i>
+            <span class="login_error" id="login_e_phone_u" style="display: none;"><i class="login_x"></i><em id="login_error_text_phone_u">请输入6-12位数字+字母组成</em></span>
+          </div>
+
+          <div class="form-group text-left" id="login_user" style="color: #999;margin-top: 20px;margin-left: -0px;">
+            <div class="checkbox i-checks" style="color: #999;">
+              <label class="no-padding">
+                <input type="checkbox" checked><i></i> 我已阅读并同意</label>
+                <a target="_blank"  href="{{helper.urlgen('agreement', '')}}" style="color: #c13232">金吉列用户使用协议</a>
+            </div>
+          </div>
+
+          <input type="button" class="btn login-primary" style="margin-top: 20px;width: 100%;height: 34px;padding-left: 0;padding-right: 0;border-radius: inherit;border: 1px solid #c13232;" id="loginSubmit" value="注 册" data-url='{{url}}'/>
+          </form>
+
+          <div class="login_check clearfix" style="margin-top: 10px">
+              <a href="{{helper.urlgen('loginUser')}}" style="float: right;color: #333">已有账号？<small style="color: #c13232">登录</small></a>
+            </div>
+        <div class="fen" style="margin-top: 10px;">
+          <h4 style="line-height: 37px;">第三方快速登录：</h4>
+          <div class="bdsharebuttonbox" id="fx" style="float: left;margin-top: 7px">
+            <img src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo_user" style="float: left;" data-url="{{url}}"/>
+
+            <a target="_blank"  href="{{helper.wwhost}}/weixin_login?h={{url}}" style="float: left;">
+              <img src="{{helper.cdnhost}}/assets/img/weixin_login.png" alt=""/>
+            </a>
+            <img src="{{helper.cdnhost}}/assets/img/QQ_login.png" alt="" id="qq_user" style="float: left;" data-url="{{url}}"/>
+          </div>
+        </div>
+
+        </div>
       </div>
     </div>
     <div class="login_footer">
@@ -174,7 +357,7 @@
 <script>
   $(document).ready(function () {
     show_guanggao();
-    $("form").Vaild();
+    // $("form").Vaild();
     $('.i-checks').iCheck({
       checkboxClass: 'icheckbox_square-green',
       radioClass: 'iradio_square-green'
