--- a/views/center_article_detail.html
+++ b/views/center_article_detail.html
@@ -25,7 +25,7 @@
     <div style="margin-top: 20px;" >
       {% import "widget2/community_advisor/community_advisor.html" as community_advisor %}
       {% if login_info.usertype == 2 %}
-        {{community_advisor.advisor(userinfo,helper,login_info)}}
+        {{community_advisor.advisor_center(userinfo,helper,login_info)}}
       {% elif login_info.usertype == 3 %}  
         {{community_advisor.counsellor(userinfo,helper,login_info)}}
       {% else %}  
