--- a/views/center_case_detail.html
+++ b/views/center_case_detail.html
@@ -25,7 +25,7 @@
     <!-- =======顾问头像关注====== -->
     <div>
       {% import "widget2/community_advisor/community_advisor.html" as community_advisor %}
-      {{community_advisor.advisor(userinfo,helper,login_info)}}
+      {{community_advisor.advisor_center(userinfo,helper,login_info)}}
     </div>
     <!-- ========引入顾问侧边栏按钮======== -->
     {% import "widget2/side_menu/adviser_side_menu.html" as adviser_side_menu %}
