底部友情链接

--- a/views/widget/new_footer/yimin_footer.html
+++ b/views/widget/new_footer/yimin_footer.html
@@ -2,7 +2,9 @@
     <div class="liuxue-footer-content" style="margin-bottom: 0;">
         <div class="footer-top" style="height: 40px;position: relative">
             <h2>友情链接:</h2>
-            {% esi helper.include(esikey,'fragment/linkList','c=1') %}
+            <div style="float: left;width: 1058px;height: 40px;overflow: hidden">
+                {% esi helper.include(esikey,'fragment/linkList','c=1') %}
+            </div>
         </div>
         <div class="foot-map clearfix" style="padding-left: 20px">
             <div class="sitemap sitemap01">
