--- a/views/widget/new_footer/common_footer.html
+++ b/views/widget/new_footer/common_footer.html
@@ -26,7 +26,9 @@
   <div class="liuxue-footer-content" style="margin-bottom: 0;">
     <div class="footer-top" style="height: 40px;position: relative">
       <h2>友情链接:</h2>
-      {% esi helper.include(esikey,'fragment/linkList','c='+tdk.cityid) %}
+      <div style="float: left;width: 1058px;height: 40px;overflow: hidden">
+        {% esi helper.include(esikey,'fragment/linkList','c='+tdk.cityid) %}
+      </div>
     </div>
     <div style="width: 708px;float: left;padding-left: 20px">
       <div class="foot-map clearfix" style="width: 708px;">
