鼠标滑过动态

--- a/views/widget/liuxue_item/liuxue_item_nunjucks.html
+++ b/views/widget/liuxue_item/liuxue_item_nunjucks.html
@@ -10,9 +10,9 @@
           <span class="pepple-icon">{{item.user_info.realname}}<i></i></span>
         </div>
         {#<p>{{item.type}}</p>#}
-        <a target="_blank" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">
+        <a target="_blank" style="display:block;height:50px;" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">
           <div class="gw-legend gw-news">留学时讯</div>
-          <p style="clear:both">{{ item.title | ellipsis(21) }}</p>
+          <a class="atities atities-top" target="_blank" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">{{ item.title | ellipsis(21) }}</a>
         </a>
       </li>
       {% endif %}
@@ -29,9 +29,9 @@
           <span class="pepple-icon"><em>{{item.user_info.realname}}</em><i></i></span>
         </div>
         {#<p>{{item.type}}</p>#}
-        <a target="_blank" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">
+        <a target="_blank" style="display:block;height:50px;" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">
           <div class="gw-legend">{{item.tag_list | ellipsis(14)}}</div>
-          <p style="clear:both">{{item.title | ellipsis(21)}}</p>
+          <a class="atities" target="_blank" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">{{item.title | ellipsis(21)}}</a>
         </a>
       </li>
       {% endif %}
