--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -161,8 +161,8 @@
                 </div>
 
                   <div class="login_check clearfix" style="margin-top: 20px">
-                    <a href="######" style="float: left;color: #999">还没有账号？<small style="color: #c13232">免费注册</small></a>
-                    <a target="_blank"  href="{{helper.urlgen('forget')}}" style="float: right"><small>忘记密码了</small></a>
+                    <a href="{{helper.urlgen('register')}}" style="float: left;color: #999">还没有账号？<small style="color: #c13232">免费注册</small></a>
+                    <a target="_blank"  href="{{helper.urlgen('forgetUser')}}" style="float: right"><small>忘记密码了</small></a>
                   </div>
       
                 <input type="button" class="btn login-primary" style="margin-top: 20px;width: 100%;height: 34px;padding-left: 0;padding-right: 0;border-radius: inherit;border: 1px solid #c13232;border-radius: 4px;" id="loginSubmit" value="立 即 登 录" data-url='{{url}}'/>
