修改普通用户登录  审核人：海亮

--- a/views/login/forgetUser.html
+++ b/views/login/forgetUser.html
@@ -222,7 +222,7 @@
   </div>
 
     <div class="login_content">
-      <div class="login_nei text-center loginscreen  animated fadeInDown" style="text-align: left;height: 374px;">
+      <div class="login_nei text-center loginscreen  animated fadeInDown" style="text-align: left;height: 374px;margin-top: -450px;">
 
           
         <div class="login_form">     
