修改链接颜色值

--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -16,10 +16,7 @@
 .gw-items{ width: 1200px; overflow: hidden; }
 .gw-items li:nth-child(3n){margin-right:0}
 .gw-people{position:relative;float:left;margin-left:20px}
-.lx-groupitems .gw-people a{
-	background-position:0 0;
-	background-position:-18px -18px\0;
-}
+.lx-groupitems .gw-people a{background-position:0 0;background-position:-18px -18px\0;}
 :root .lx-groupitems .gw-people a{background-position:0 0\0;}
 .gw-people img{width:51px;height:51px;-webkit-border-radius:50%;border-radius:50%}
 .gw-people span{color:#333;font-size:14px;margin-top: 15px;display: inline-block;margin-left: 10px;}
@@ -39,7 +36,7 @@
 #guItems .atities-top{position:absolute;top:65px;}
 .atities{color: #333;font-size: 16px;text-indent: 20px;display: block;position: absolute;top: 57px;}
 .atities:hover{ color: #c13232;}
-.atities:visited{ color: #c0c0c0;}
+.atities:visited{ color: #999;}
 </style>
 {% for floor in shouye %} {#国家#}
 {% set ad_seat_index = loop.index + 10 %}
