底部地图  审核  淑琴

--- a/views/widget/new_footer/common_footer.html
+++ b/views/widget/new_footer/common_footer.html
@@ -70,7 +70,7 @@
           <li style="width: 1100px;">
             <ul>
               <li><i class="iconfont">&#xe611;</i><span>027-67811600&nbsp;&nbsp;/&nbsp;&nbsp;027-83805656</span></li>
-              <li><i class="iconfont">&#xe603;</i><span>武昌分公司：武汉市洪山区珞瑜路10号群光中心百脑汇23层&nbsp;<span class="useMap" style="color: #fff;margin-left: 20px;text-decoration: underline">【点击查看地图】</span>     &nbsp;&nbsp;汉口分公司：武汉市航空路新世界中心C座20层<span class="useMap" style="color: #fff;margin-left: 20px;text-decoration: underline">【点击查看地图】</span></span></li>
+              <li><i class="iconfont">&#xe603;</i><span>武昌分公司：武汉市洪山区珞瑜路10号群光中心百脑汇23层&nbsp;<span class="useMap wc" style="color: #fff;margin-left: 20px;text-decoration: underline">【点击查看地图】</span>     &nbsp;&nbsp;汉口分公司：武汉市航空路新世界中心C座20层<span class="useMap wh" style="color: #fff;margin-left: 20px;text-decoration: underline">【点击查看地图】</span></span></li>
             </ul>
 
           </li>
