--- a/views/widget/new_footer/new_footer.html
+++ b/views/widget/new_footer/new_footer.html
@@ -57,14 +57,14 @@
           <ul>
             <li><i class="iconfont">&#xe611;</i><span>027-67811600</span></li>
             <li><i class="iconfont">&#xe603;</i><span>武昌分公司：武汉市洪山区珞瑜路10号群光中心百脑汇23层 </span>
-              <span class="useMap" style="color: #fff;margin-left: 20px;text-decoration: underline">【点击查看地图】</span></li>
+              <span class="useMap wc" style="color: #fff;margin-left: 20px;text-decoration: underline">【点击查看地图】</span></li>
           </ul>
 
         </li>
        <li  class="wuhan-address" style="width: 550px">
         <ul>
           <li><i class="iconfont">&#xe611;</i><span>027-83805656</span></li>
-          <li><i class="iconfont">&#xe603;</i><span>汉口分公司：武汉市航空路新世界中心C座20层 </span><span class="useMap" style="color: #fff;margin-left: 20px;text-decoration: underline">【点击查看地图】</span></li>
+          <li><i class="iconfont">&#xe603;</i><span>汉口分公司：武汉市航空路新世界中心C座20层 </span><span class="useMap wh" style="color: #fff;margin-left: 20px;text-decoration: underline">【点击查看地图】</span></li>
         </ul>
 
        </li>
