--- a/views/widget/new_footer/common_footer.html
+++ b/views/widget/new_footer/common_footer.html
@@ -63,14 +63,14 @@
         <ol class="xiangxi-address one" id="qita-city" style="margin-bottom: 34px;">
           <li><i class="iconfont">&#xe679;</i><span>400-010-8000</span></li>
           <li><i class="iconfont">&#xe611;</i><span id="tel">010-65685656</span></li>
-          <li><i class="iconfont">&#xe603;</i><span id="address">北京市建国门外大街永安东里米阳大厦5层（永安里地铁C口向南50米) </span><span class="useMap" style="color: #fff;margin-left: 20px;text-decoration: underline">【点击查看地图】</span></li>
+          <li><i class="iconfont">&#xe603;</i><span id="address">北京市建国门外大街永安东里米阳大厦5层（永安里地铁C口向南50米) </span><span class="useMap" style="color: #fff;margin-left: 20px;text-decoration: underline;cursor: pointer;">【点击查看地图】</span></li>
         </ol>
         <ul class="xiangxi-address one clearfix" id="wc-hk" style="display: none;margin-bottom: 34px;" >
           <li><i class="iconfont">&#xe679;</i><span>400-010-8000</span></li>
           <li style="width: 1100px;">
             <ul>
               <li><i class="iconfont">&#xe611;</i><span>027-67811600&nbsp;&nbsp;/&nbsp;&nbsp;027-83805656</span></li>
-              <li><i class="iconfont">&#xe603;</i><span>武昌分公司：武汉市洪山区珞瑜路10号群光中心百脑汇23层&nbsp;<span class="useMap wc" style="color: #fff;margin-left: 20px;text-decoration: underline">【点击查看地图】</span>     &nbsp;&nbsp;汉口分公司：武汉市航空路新世界中心C座20层<span class="useMap wh" style="color: #fff;margin-left: 20px;text-decoration: underline">【点击查看地图】</span></span></li>
+              <li><i class="iconfont">&#xe603;</i><span>武昌分公司：武汉市洪山区珞瑜路10号群光中心百脑汇23层&nbsp;<span class="useMap wc" style="color: #fff;margin-left: 20px;text-decoration: underline;cursor: pointer;">【点击查看地图】</span>     &nbsp;&nbsp;汉口分公司：武汉市航空路新世界中心C座20层<span class="useMap wh" style="color: #fff;margin-left: 20px;text-decoration: underline;cursor: pointer;">【点击查看地图】</span></span></li>
             </ul>
 
           </li>
