--- a/views/widget/new_footer/new_footer.css
+++ b/views/widget/new_footer/new_footer.css
@@ -131,3 +131,15 @@
   bottom: -20px;
   width:100%;
 }
+/*地图样式*/
+.mapBg {
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  position: fixed;
+  z-index: 100000;
+  top: 0;
+}
+.voucherLink{position:fixed;top:50%;left:50%;z-index:100010;margin:-250px 0 0 -382px;width:766px;height:500px;}
+.voucherLink .voucherclose{display:block;background:url(../img/indexpop_close.png) no-repeat 50% 50%;position:absolute;top:0;right:0;height:50px;cursor:pointer;
+  width:50px;}
