修改密码登录 审核人：田海亮

--- a/views/login/forgetUser.html
+++ b/views/login/forgetUser.html
@@ -43,6 +43,7 @@
       border-radius: 4px;
       background-color: #fff;
       background-image: none;
+      font-size: 14px;
     }
     .inputtext_isr .login_error{
       background-color: #FFFBEF;
