--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -37,6 +37,7 @@
       border-radius: 4px;
       background-color: #fff;
       background-image: none;
+      font-size: 14px;
     }
     .inputtext_isr .login_error{
       background-color: #FFFBEF;
