--- a/views/login/register.html
+++ b/views/login/register.html
@@ -62,6 +62,7 @@
       border-radius: 4px;
       background-color: #fff;
       background-image: none;
+      font-size: 14px;
     }
     .inputtext_isr .login_error{
       background-color: #FFFBEF;
