地图功能提出，只有搜索类型为文章的时候热门签儿才显示 审核人：海亮

--- a/public/assets/css/logo.css
+++ b/public/assets/css/logo.css
@@ -439,6 +439,8 @@
 	height: 50px;
 	line-height: 50px;
 	font-size: 12px;
+	padding-left: 10px;
+	color: #C13232;
 }
 .xuanze-haiwai-bikuang {
 	width: 680px;
