--- a/views/index.html
+++ b/views/index.html
@@ -347,6 +347,14 @@
         {
         "companyName": "温哥华",
         "companyId": "49"
+        },
+        {
+        "companyName": "多伦多",
+        "companyId": "50"
+        },
+        {
+        "companyName": "奥克兰",
+        "companyId": "51"
         }
         ] %}
         {% for item in cityList %}
@@ -356,6 +364,12 @@
         </div>
         {% endif %}
         {% endfor %}
+        <div class="branch_company_text_tilte" data-id="{{cityList[50].companyId}}">
+          <a  href="http://www.jjl.cn/zt/overseas/2018_auckland/index.html" data-id="{{cityList[50].companyId}}" >{{cityList[50].companyName}}</a>
+        </div>
+        <div class="branch_company_text_tilte" data-id="{{cityList[49].companyId}}">
+          <a  href="http://www.jjl.cn/zt/overseas/2018_toronto/index.html" data-id="{{cityList[49].companyId}}" >{{cityList[49].companyName}}</a>
+        </div>
         <div class="branch_company_text_tilte" data-id="{{cityList[48].companyId}}">
           <a  href="http://www.jjl.cn/zt/overseas/vancouver/index.html" data-id="{{cityList[48].companyId}}" >{{cityList[48].companyName}}</a>
         </div>
