404页面查看地图，联系我们底部地图 审核人：海亮

--- a/views/error.html
+++ b/views/error.html
@@ -19,6 +19,9 @@
 </p>
 <script src="{{helper.cdnhost}}/assets/js/nav_liuxue_search.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+<script src="http://api.map.baidu.com/api?v=2.0&ak=A1LU7iHS0avqQwPLAxbhKn0UYSQCuRVH"></script>
+<script src="{{helper.cdnhost}}/assets/js/jquery.baiduMap.min.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/showMap.js"></script>
 <script>
     $('.liuxue-back-btn').on('click',function(e) {
         e.preventDefault();
